# gmail-parser

./: Gemfile  README.md  filter.py  filter.rb  joplin_api.rb  message.rb  parser.py  pyproject.toml  transformation.rb
tests/: test_gmail_parser.py
