[tool.poetry]
name = "gmail-parser"
version = "0.1.0"
description = ""
authors = ["Manoj Dayaram <m@noj.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
ipython = "^8.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
